Removes some CSS from the fuel economy widget to prevent the annual fuel consumption line from overlapping the combined city highway figures in Chrome.

--- a/css/widget-epa-fuel-economy.css
+++ b/css/widget-epa-fuel-economy.css
@@ -5,7 +5,7 @@
 .fuel-economy-fuel {
 	display: grid;
 	grid-template-columns: 5.5em 4em 25% 25%;
-	grid-template-rows: 99% 2em;
+	/* grid-template-rows: 99% 2em;  causes overlap in Chrome */
 	min-width: 280px;
 	max-width: 45%;
 	float: left;
